docs: finish user routes docs
